criação de página serviços e input

--- a/styles/abstract/_variaveis.scss
+++ b/styles/abstract/_variaveis.scss
@@ -7,4 +7,4 @@ $tamanho-texto: 3rem;
 //color
 $cor-primaria: #FA7070;
 $cor-secundaria: #F8C4B4;
-$cor-terciaria: #425F57; 
+$cor-terciaria: #B9005B; 
